<resources>
    <string name="app_name">Next Class</string>
    <string name="onboarding_image_description">onboarding_image</string>
    <string name="onboarding_title">Welcome to Next Class</string>
    <string name="onboarding_description">Learn anytime, anywhere. with our personalized classes.</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="app_logo">app_logo</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="or_text">or</string>
    <string name="login_subtitle">Hope you have fun learning with us!</string>
    <string name="welcome_text">Welcome To The Future of Learning</string>
    <string name="sign_in_email">Sign in with Email</string>
</resources>